2010-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.h: New flag TC_VARIABLE (only used for textcolor)

	* src/misc.c (parse_colorspec) src/set.c (set_key) 
	src/graphics.c (do_key_sample):  Accept "set key tc variable"

2010-06-27  Peter Juhasz

	* src/graphics.c src/plot2d.c: Remove dead code supporting the old way
	of handling variable color.  Make "lc palette z" work.
	Since the new variable color mechanism frees up space in struct
	coordinate, use this to clean up the data storage for "with circles".

	* demo/varcolor.dem:  General demo and debugging tool for the expanded
	support of variable color across almost all plot styles.

	* src/graphics.c src/plot2d.c: Implement variable color for
	*ERRORBARS, *ERRORLINES, FINANCEBARS, CANDLESTICKS

	NB: Not all of the plot styles are working with variable color yet.

2010-06-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.h src/graphics.c plot2d.c:  Maintain a dynamically-
	allocated array of per-datapoint color values in the header of each 2D
	plot.  The array is allocated only if the plot uses variable color.

	* src/plot2d.c: Store variable color data in the plot->varcolor[] array
	for plot styles VECTOR CIRCLES BOXES LINES DOTS IMPULSES POINTSTYLE
	LINESPOINTS XYERRORLINES XYERRORBARS BOXXYERROR LABELPOINTS BOXERROR

	* src/graphics.c (check_for_variable_color):  Convert this routine to
	check and load variable color using the new mechanism.
	Add variable color support for BOXXYERROR, BOXERROR

2010-06-26  Peter Juhasz

	* src/plot2d.c: In plots style "with circles", let a negative value for
	the radius indicate that the default radius should be used.

2010-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/gadgets.h src/graphics.c src/plot2d.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h src/unset.c
	docs/gnuplot.doc:

	New style element "set style circle radius <R>" specifies a default